# cache-project-baseline

./: .gitlab-ci.yaml  .gitlab-ci.yml  CMakeLists.txt  README.md  prueba.cpp
include/: L1Obl.h  L1cache.h  L2cache.h  Victimcache.h  debug_utilities.h  utilities.h
src/: CMakeLists.txt  L1Obl.cpp  L1cache.cpp  L2cache.cpp  Victimcache.cpp  debug_utilities.cpp  main.cpp  utilities.cpp
test/: CMakeLists.txt  L1Obl_test.cpp  L1cache_test.cpp  L2cache_test.cpp  Victimcache_test.cpp  test_main.cpp
